fixing an issue where the main content would be squashed to make room for the side menu insted of being moved off screen

--- a/src/styles/MobileNavigation.module.scss
+++ b/src/styles/MobileNavigation.module.scss
@@ -55,9 +55,11 @@
 }
 
 .mainContent {
+    transition: margin-left 0.3s ease;
     transition: margin-right 0.3s ease;
 }
 
 .mainContent.menuOpen {
+    margin-left: -200px;
     margin-right: 200px;
 }
